details alignment and spacing fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,10 @@ h4 {
   left: -3px;
 }
 .details {
-  padding: 10px;
+  display: flex;
+  position: relative;
+  left: -7px;
+  justify-content: space-around;
 }
 
 h5 {
